Add currency resource to API
